<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:padding="@dimen/default_margin1"
    tools:context=".ui.UserInputActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/windSpeedTextInputLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/wind_speed"
        app:boxStrokeColor="@color/colorWhite"
        app:boxStrokeErrorColor="@color/md_red_500"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="@string/enter_wind_speed"
        app:helperTextTextColor="@color/colorWhite"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/windSpeedEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cloudColorTextInputLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/cloud_color"
        app:boxStrokeColor="@color/colorWhite"
        app:boxStrokeErrorColor="@color/md_red_500"
        app:boxStrokeWidth="2dp"
        app:endIconMode="dropdown_menu"
        app:errorEnabled="true"
        app:helperText="@string/select_cloud_color"
        app:helperTextTextColor="@color/colorWhite"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windSpeedTextInputLay">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/cloudColorEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tempTextInputLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/temp"
        app:boxStrokeColor="@color/colorWhite"
        app:boxStrokeErrorColor="@color/md_red_500"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="@string/enter_temp"
        app:helperTextTextColor="@color/colorWhite"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cloudColorTextInputLay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tempEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:maxLines="1"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/predictButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin1"
        android:layout_marginBottom="@dimen/default_margin1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/predict"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/button_text"
        android:textStyle="bold"
        app:backgroundTint="@color/colorWhite"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>